--- a/src/main/java/View.form
+++ b/src/main/java/View.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="110" y="76" width="350" height="341"/>
+      <xy x="110" y="76" width="576" height="340"/>
     </constraints>
     <properties>
       <background color="-1"/>
@@ -18,7 +18,7 @@
       <grid id="e985a" binding="panelPolynomials" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="0" vgap="0">
         <margin top="0" left="0" bottom="0" right="10"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="300" height="-1"/>
           </grid>
         </constraints>
@@ -27,7 +27,7 @@
         <children>
           <component id="e54d3" class="javax.swing.JLabel" binding="labelP1">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="4" anchor="6" fill="0" indent="0" use-parent-layout="false">
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="6" fill="0" indent="0" use-parent-layout="false">
                 <preferred-size width="10" height="-1"/>
               </grid>
             </constraints>
@@ -71,7 +71,7 @@
           </component>
         </children>
       </grid>
-      <grid id="6d66c" binding="panelResult" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="6d66c" binding="panelResult" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="10" bottom="0" right="10"/>
         <constraints>
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -83,11 +83,20 @@
         <children>
           <component id="89c6d" class="javax.swing.JLabel" binding="result">
             <constraints>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <horizontalAlignment value="0"/>
-              <opaque value="false"/>
+              <opaque value="true"/>
+              <text value=""/>
+            </properties>
+          </component>
+          <component id="4148b" class="javax.swing.JLabel" binding="rest">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <horizontalAlignment value="0"/>
               <text value=""/>
             </properties>
           </component>
@@ -104,61 +113,61 @@
           <component id="14ecd" class="javax.swing.JButton" binding="buttonAdd">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="6" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="100" height="-1"/>
+                <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties>
-              <text value="P1 + P2"/>
+              <text value="Addition"/>
             </properties>
           </component>
           <component id="8d701" class="javax.swing.JButton" binding="buttonSub">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="5" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="100" height="-1"/>
+                <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties>
-              <text value="P1 - P2"/>
+              <text value="Subtraction"/>
             </properties>
           </component>
           <component id="e4d11" class="javax.swing.JButton" binding="buttonMul">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="100" height="-1"/>
+                <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties>
-              <text value="P1 * P2"/>
+              <text value="Multiplication"/>
             </properties>
           </component>
           <component id="14972" class="javax.swing.JButton" binding="buttonDiv">
             <constraints>
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="1" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="100" height="-1"/>
+                <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties>
-              <text value="P1 / P2"/>
+              <text value="Division"/>
             </properties>
           </component>
           <component id="a13f7" class="javax.swing.JButton" binding="buttonInt">
             <constraints>
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="100" height="-1"/>
+                <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties>
-              <text value="Integral"/>
+              <text value="Integration"/>
             </properties>
           </component>
           <component id="66242" class="javax.swing.JButton" binding="buttonDer">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="10" fill="0" indent="0" use-parent-layout="false">
-                <preferred-size width="100" height="-1"/>
+                <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
             <properties>
-              <text value="Derivative"/>
+              <text value="Derivation"/>
             </properties>
           </component>
         </children>
